<resources>
    <string name="app_name">AlphaPro Mobile Ticketing</string>

    <!-- Strings related to login -->
    <string name="prompt_ktel_id">Αναγνωριστικό Χρήστη</string>
    <string name="prompt_key">Κλειδί Χρήστη</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_bus_id">Bus unique ID</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up"><u>Sign up</u> </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_test">AlphaPro Mobile Ticketing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="nav_first_item_value">Έκδοση Εισιτηρίων</string>
    <string name="nav_first_item_routes_value">Επιλογή Δρομολογίου</string>
    <string name="nav_second_item_value">Οριζόμενα Εισιτήρια</string>
    <string name="nav_third_item_value">Μη Ενημερωμένα Εισιτήρια</string>
    <string name="nav_fourth_item_value">Ερώτηση Υπολοίπου</string>
    <string name="nav_fifth_item_value">Ερώτηση Ημέρας</string>
    <string name="nav_sixth_item_value">Αναλυτική Κατάσταση</string>
    <string name="nav_seventh_item_value">Πληροφορίες</string>
    <string name="nav_eighth_item_value">Αποσύνδεση</string>

    <string name="title_activity_routes">Επιλογή Δρομολογίου</string>
    <string name="title_activity_routes_return">Επιλογή Δρομολογίου Επιστροφής</string>
    <string name="title_activity_defined_tickets">Οριζόμενα Εισιτήρια</string>
    <string name="title_activity_defined_tickets_from_routes">Οριζόμενα Εισιτήρια</string>
    <string name="title_activity_non_updated_tickets">Μη Ενημερωμένα Εισιτήρια</string>
    <string name="title_activity_non_updated_tickets_from_routes">Μη Ενημερωμένα Εισιτήρια</string>
    <string name="title_activity_balance_question">Ερώτηση Υπολοίπου</string>
    <string name="title_activity_balance_question_from_routes">Ερώτηση Υπολοίπου</string>
    <string name="title_activity_day_question">Ερώτηση Ημέρας</string>
    <string name="title_activity_day_question_from_routes">Ερώτηση Ημέρας</string>
    <string name="title_activity_detail_list">Αναλυτική Κατάσταση</string>
    <string name="title_activity_detail_list_from_routes">Αναλυτική Κατάσταση</string>
    <string name="title_activity_information">Πληροφορίες</string>
    <string name="title_activity_information_from_routes">Πληροφορίες</string>






</resources>
