<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_first_item"
                android:icon="@mipmap/ic_printer"
                android:title="@string/nav_first_item_value"/>
            <item
                android:id="@+id/nav_second_item"
                android:icon="@mipmap/ic_tune_vertical"
                android:title="@string/nav_second_item_value" />
            <item
                android:id="@+id/nav_third_item"
                android:icon="@mipmap/ic_update"
                android:title="@string/nav_third_item_value" />
            <item
                android:id="@+id/nav_fourth_item"
                android:icon="@mipmap/ic_scale_balance"
                android:title="@string/nav_fourth_item_value" />
            <item
                android:id="@+id/nav_fifth_item"
                android:icon="@mipmap/ic_calendar_question"
                android:title="@string/nav_fifth_item_value" />
            <item
                android:id="@+id/nav_sixth_item"
                android:icon="@mipmap/ic_view_list"
                android:title="@string/nav_sixth_item_value" />
            <item
                android:id="@+id/nav_seventh_item"
                android:icon="@mipmap/ic_information_variant"
                android:title="@string/nav_seventh_item_value" />
            <item
                android:id="@+id/nav_eighth_item"
                android:icon="@mipmap/ic_logout"
                android:title="@string/nav_eighth_item_value" />
        </group>


</menu>
